--- a/Style/news.css
+++ b/Style/news.css
@@ -3,6 +3,7 @@
 	border: 1px solid #AAA;
 	border-radius: 4px;
 	margin: 5px 0px;
+	position: relative;
 }
 
 .newsHeader
@@ -17,11 +18,20 @@
 	font-weight: bold;
 }
 
-.newsAdded, .newsEdit
+.newsAdded
 {
 	margin-right: 3px;
 	font-size: smaller;
 	float: right;
+}
+
+.newsEdit
+{
+	position: relative;
+	margin-right: 3px;
+	margin-top: -3px;
+	float: right;
+	z-index: 1;
 }
 
 .newsText
@@ -31,22 +41,11 @@
     font-size: 15px;
 	font-weight: normal;
     line-height: 1.2;
-    word-break: break-all;
     word-wrap: break-word;
+	white-space: normal;
 	padding: 7px;
 	margin: 0px;
 }
-
-.newsPost:hover
-{
-	background:#FFA;
-}
-.newsPost:active
-{
-	background:#dbf5fc;
-}
-
-
 
 
 
@@ -57,30 +56,6 @@
 	width:100%;
 }
 
-
-/************************/
-/****#side_article*******/
-/************************/
-#side_article
-{
-	min-height:700px;	
-}
-#side_article p
-{
-    width:100%;
-	margin:1%;
-	padding-left:1%;
-	font-size:15px;
-	font-family: Arial, Helvetica, sans-serif;
-	
-}
-
-#side_article a
-{
-    text-decoration:none;
-    color:black;
-    outline:0;
-}
 
 
 /************************/
