--- a/Style/style.css
+++ b/Style/style.css
@@ -21,7 +21,6 @@ body
 	background:url("../img/bg.JPG");
 	margin:1%;
 	margin:auto;
-	min-height:700px;
     font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
     /*color:#1e3948;*/
 }
@@ -47,21 +46,18 @@ header
 
 main
 {
+	min-height:700px;
     overflow: auto;
     background:#fff;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
-
 }
 
 footer 
 {
 	background-color: #0070B6;
 	color: #fff;
-
 }
-
-
 
 @media (min-width: 768px) {
     main, footer, .navbar
@@ -140,6 +136,30 @@ background-color:#e7e7e7;
 	width: 80%;
 	margin: auto;
 	text-align: center;
+}
+
+
+  /* edit: fixes overlap error in IE7/8, 
+     make sure you have an empty gif 
+  background-image: url('empty.gif');*/
+.boxLink
+{
+	position: absolute;
+	z-index: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.boxLink:hover
+{
+	background: #ddd;
+	opacity: 0.2;
+}
+
+.boxLink:active
+{
+	background: #aaa;
+	opacity: 0.2;
 }
 
 /*
